org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/table/table.css
.table {
height: 100%;
width: 100%;
overflow: hidden;
padding-top: 12px;
}

/* main table header */

.table-header {
position: relative;
border-bottom: 1px solid #EEE;
white-space: nowrap;
padding: 0px 0px 0px 12px; /* 12px = (4px left-pad .table-data) + (2px left-pad .table-row) + 6px left-pad table cells) */
}


.header-item {
position: relative;
display: inline-block;
padding: 7px 0px 0px 0px;
font-weight: bold;
cursor:pointer;
overflow: hidden;
text-overflow: ellipsis;
line-height: 14px;
}

.header-item.sort-up,
.header-item.sort-down,
.header-item.filter,
.header-item.group-all,
.header-item.group-sort {
color:#0082A1;
}

.header-item:hover, .header-move{
color:#FE9915
}

.header-resize {
display: inline-block;
position: relative;
top: 0px;
cursor: col-resize;
height: 25px;
width: 17px;
background-color: transparent;
padding-left: 8px;
padding-right: 8px;
background-clip: content-box;
}

.header-item:hover + .header-resize, .header-resize:hover {
background-color: #EEE;
}

.header-item.header-move + .header-resize{
background-color: transparent;
}


#HeaderOrganize{
position: absolute;
bottom: 6px;
right: 0px;
width: 20px;
heigth: 20px;
cursor: pointer;
font-family: fontAwesome;
font-size: 17px;
line-height: 17px;
color:#D4D4D4;
}

#HeaderOrganize:before {
content:"\F013";
}

#HeaderOrganize:hover{
color:#FE9915
}


/* main table data */

.table-data {
position: relative;
height: calc(100% - 80px);
width: 100%;
overflow: hidden;
padding-left: 4px;
}

.table-data > .scrollbar {
right: 7px;
margin-top: 10px;
margin-bottom: 10px;
height: calc(100% - 23px);
}

.table-data > .scrollable-y {
position: absolute;
top: 0px;
height: 100%;
width: calc(100% - 11px);
}

/* table rows */

.table-row, .table-row-sum {
position:relative;
overflow: hidden;
line-height: 26px;
padding: 2px;
margin-bottom: -2px;
}

.table-row > div, .table-row-sum > div {
display: table-cell;
padding: 3px 6px 0px 6px;
background-color: transparent;
white-space: nowrap;
border-bottom: 1px solid #EEE;
overflow: hidden;
text-overflow: ellipsis;
vertical-align: top;
line-height: 26px;
}

.table-row-sum > div {
font-weight: bold;
}

.table-row-sum:last-child > div {
border-bottom: none;
}

/* Selected rows: Replace 2px padding by 2px border(s) */

.table-row.select-top {
padding-top: 0px;
padding-left: 0px;
padding-right: 0px;
border-top: 2px solid #0082a1;
border-left: 2px solid #0082a1;
border-right: 2px solid #0082a1;
border-top-left-radius: 7px;
border-top-right-radius: 7px;
}

.table-row.select-middle {
padding-left: 0px;
padding-right: 0px;
border-left: 2px solid #0082a1;
border-right: 2px solid #0082a1;
}

.table-row.select-bottom {
padding-bottom: 0px;
padding-left: 0px;
padding-right: 0px;
border-bottom: 2px solid #0082a1;
border-left: 2px solid #0082a1;
border-right: 2px solid #0082a1;
border-bottom-left-radius: 7px;
border-bottom-right-radius: 7px;
}

.table-row.select-single {
padding-top: 0px;
padding-bottom: 0px;
padding-left: 0px;
padding-right: 0px;
border-top: 2px solid #0082a1;
border-bottom: 2px solid #0082a1;
border-left: 2px solid #0082a1;
border-right: 2px solid #0082a1;
border-radius: 7px;
}

.table-row.select-single > div, .table-row.select-bottom > div{
border-bottom: 1px solid transparent;
}


.table .key-box{
right: 24px;
width: 32px;
}

.table .key-box.top3 { top: 10px;}
.table .key-box.top2 { top: 32px;}
.table .key-box.top1 { top: 54px;}
.table .key-box.bottom1 { bottom: 54px;}
.table .key-box.bottom2 { bottom: 32px;}
.table .key-box.bottom3 { bottom: 10px;}
.table .key-box.char { bottom: 8px; }

