HtmlUi: Fixed selected row borders when using browser zoom
Use invisible border that changes color for selected rows instead of a
padding that will be replaced by a border for selected rows) because
'border' and 'padding' behave differently when using browser zoom. By
consistently using borders, we get a mostly consistent behavior.

This solution is not perfect yet, there are issues in the corners of a
row when using a very large zoom (because left and top border have a
different color).

--- a/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/table/table.css
+++ b/org.eclipse.scout.rt.ui.html.parent/org.eclipse.scout.rt.ui.html/src/main/js/table/table.css
@@ -1,5 +1,3 @@
-
-
 .table {
 height: 100%;
 width: 100%;
@@ -15,7 +13,6 @@ border-bottom: 1px solid #EEE;
 white-space: nowrap;
 padding: 0px 0px 0px 12px; /* 12px = (4px left-pad .table-data) + (2px left-pad .table-row) + 6px left-pad table cells) */
 }
-
 
 .header-item {
 position: relative;
@@ -83,7 +80,6 @@ content:"\F013";
 color:#FE9915
 }
 
-
 /* main table data */
 
 .table-data {
@@ -114,7 +110,8 @@ width: calc(100% - 11px);
 position:relative;
 overflow: hidden;
 line-height: 26px;
-padding: 2px;
+border: 2px solid transparent;
+border-radius: 0px;
 margin-bottom: -2px;
 }
 
@@ -138,46 +135,34 @@ font-weight: bold;
 border-bottom: none;
 }
 
-/* Selected rows: Replace 2px padding by 2px border(s) */
+/* Selected rows */
 
 .table-row.select-top {
-padding-top: 0px;
-padding-left: 0px;
-padding-right: 0px;
-border-top: 2px solid #0082a1;
-border-left: 2px solid #0082a1;
-border-right: 2px solid #0082a1;
+border-top-color: #0082a1;
+border-left-color: #0082a1;
+border-right-color: #0082a1;
 border-top-left-radius: 7px;
 border-top-right-radius: 7px;
 }
 
 .table-row.select-middle {
-padding-left: 0px;
-padding-right: 0px;
-border-left: 2px solid #0082a1;
-border-right: 2px solid #0082a1;
+border-left-color: #0082a1;
+border-right-color: #0082a1;
 }
 
 .table-row.select-bottom {
-padding-bottom: 0px;
-padding-left: 0px;
-padding-right: 0px;
-border-bottom: 2px solid #0082a1;
-border-left: 2px solid #0082a1;
-border-right: 2px solid #0082a1;
+border-bottom-color: #0082a1;
+border-left-color: #0082a1;
+border-right-color: #0082a1;
 border-bottom-left-radius: 7px;
 border-bottom-right-radius: 7px;
 }
 
 .table-row.select-single {
-padding-top: 0px;
-padding-bottom: 0px;
-padding-left: 0px;
-padding-right: 0px;
-border-top: 2px solid #0082a1;
-border-bottom: 2px solid #0082a1;
-border-left: 2px solid #0082a1;
-border-right: 2px solid #0082a1;
+border-top-color: #0082a1;
+border-bottom-color: #0082a1;
+border-left-color: #0082a1;
+border-right-color: #0082a1;
 border-radius: 7px;
 }
 
@@ -185,6 +170,7 @@ border-radius: 7px;
 border-bottom: 1px solid transparent;
 }
 
+/* Key box */
 
 .table .key-box{
 right: 24px;
@@ -198,4 +184,3 @@ width: 32px;
 .table .key-box.bottom2 { bottom: 32px;}
 .table .key-box.bottom3 { bottom: 10px;}
 .table .key-box.char { bottom: 8px; }
-
